# set_game_simulator

./: .gitignore  Cargo.toml  README.md  data.csv  requirements.txt  slurm.sh
data/: data-001-2021-12-15T20:31:40.105097079Z.csv  data-002-2021-12-15T20:31:40.442404544Z.csv  data-003-2021-12-15T20:31:40.273508022Z.csv  data-014-2021-12-15T20:31:40.266732899Z.csv  data-015-2021-12-15T20:31:40.239725270Z.csv  data-016-2021-12-15T20:31:40.202869183Z.csv  data-017-2021-12-15T20:31:40.312456318Z.csv  data-018-2021-12-15T20:31:40.249054019Z.csv  data-019-2021-12-15T20:31:40.227035484Z.csv  data-021-2021-12-15T20:31:40.252697558Z.csv  data-022-2021-12-15T20:31:40.333987893Z.csv  data-023-2021-12-15T20:31:40.245275485Z.csv  data-028-2021-12-15T20:31:40.270911906Z.csv  data-029-2021-12-15T20:31:40.310271824Z.csv  data-032-2021-12-15T20:31:40.293716900Z.csv  data-033-2021-12-15T20:31:40.316043854Z.csv  data-035-2021-12-15T20:31:40.327386871Z.csv  data-036-2021-12-15T20:31:40.307815152Z.csv  data-037-2021-12-15T20:31:40.247824948Z.csv  data-038-2021-12-15T20:31:40.249018033Z.csv  data-039-2021-12-15T20:31:40.243197351Z.csv  data-040-2021-12-15T20:31:40.294694306Z.csv  data-041-2021-12-15T20:31:40.255777969Z.csv  data-042-2021-12-15T20:31:40.249248669Z.csv  data-043-2021-12-15T20:31:40.244691361Z.csv  data-044-2021-12-15T20:31:40.269819521Z.csv  data-045-2021-12-15T20:31:40.504623095Z.csv  data-046-2021-12-15T20:31:40.323271715Z.csv  data-047-2021-12-15T20:31:40.290193891Z.csv  data-048-2021-12-15T20:31:40.265881423Z.csv  data-049-2021-12-15T20:31:40.291099939Z.csv  (+70 more)
python/: data.txt  (+2 more)
(+5607 files in other folders)
