[package]
name = "set_simulator"
version = "0.1.0"
authors = ["aujxn <ajn6@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]

rand = "0.7.0"
itertools = "0.8.0"
rayon = "1.1.0"
log = "0.4"
env_logger = "0.6"
chrono = "0.4"
clap = {version = "2.33", features = ["yaml"]}
csv = "1.1"
